feat(tailwind.config): add warning color

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,6 +23,10 @@
   --success-light: 212 100% 60%;
   --success-dark: 213 94% 42%;
   --success-lighter: 215 100% 91%;
+  --warning-ligher: 40 100% 91%;
+  --warning-light: 37 91% 65%;
+  --warning: 37 91% 55%;
+  --warning-dark: 29 89% 35%;
   --violet: 270 67% 47%;
   --violet-light: 261 55% 61%;
   --violet-dark: 262 55% 35%;
