--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -80,4 +80,8 @@
       @apply text-success-dark fill-success-dark stroke-foreground stroke-2 !important;
     } */
   }
+
+  input[type="date"]::-webkit-calendar-picker-indicator {
+    filter: invert(100%);
+  }
 }
